<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryRed"
    tools:context="com.shallowblue.shallowblue.StartGameActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/StartgameActivity_difficulty"
            android:textSize="35dp"/>

        <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_gravity="center" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="2"
            android:orientation="horizontal" >

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StartGameActivity_play_as_white"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StartGameActivity_play_as_black"/>
            </RadioGroup>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/opponent_ai_spinner"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/suggestion_ai_spinner"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/StartGameActivity_load_game"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/StartGameActivity_create_scenario"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:text="@string/StartGameActivity_start_game"
            android:onClick="newGame"/>

    </LinearLayout>

</RelativeLayout>
