<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PVPGameBoard"
    android:background="#c8200a">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:padding="0dp"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:rotation="180"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="2"
            android:padding="0dp"
            android:orientation="horizontal"
            android:id="@+id/Player2Buttons">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:padding="0dp"
                android:orientation="vertical" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:orientation="horizontal" >

                    <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/GameBoardActivity_undo"
                        android:id="@+id/Undo2" />

                    <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/GameBoardActivity_redo"
                        android:id="@+id/Redo2" />

                </LinearLayout>

                <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/GameBoardActivity_start_helper"
                    android:id="@+id/Helper2" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:padding="0dp"
                android:orientation="vertical" >

                <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/GameBoardActivity_options"
                    android:id="@+id/Options2" />

                <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GameBoardActivity_suggest_alternate_move"
                    android:textSize="10dp"
                    android:id="@+id/SuggestAlternate2" />

            </LinearLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:id="@+id/GameBoard">

        </GridLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="2"
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/Player1Buttons">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:padding="0dp"
                android:orientation="vertical" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/GameBoardActivity_undo"
                        android:id="@+id/Undo1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/GameBoardActivity_redo"
                        android:id="@+id/Redo1" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/GameBoardActivity_start_helper"
                    android:id="@+id/Helper1" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:padding="0dp"
                android:orientation="vertical" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/GameBoardActivity_options"
                    android:id="@+id/Options1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GameBoardActivity_suggest_alternate_move"
                    android:textSize="10dp"
                    android:id="@+id/SuggestAlternate1"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
